refactor: DB를 사용하는 코드로 변경